Revert "volumes of meta updated"
This reverts commit 406e340a991db0e9f59c05ddfacef8e0c3505265.

--- a/P007838.opf/meta.yml
+++ b/P007838.opf/meta.yml
@@ -5,16 +5,18 @@ source_metadata:
   title: མཛོད་ལྷ་འགྲེལ།
   author: ''
   volumes:
-    dbc3f3610ce7489f8975b799c71112bf:
+    91e1c6b9437e400fa6899504b0aceb5f:
       image_group_id: I2PD18030
-      title: ''
+      title: Volume 1 of mdzod lha 'grel/
       volume_number: 1
       total_pages: 244
-    3736cbefcdb946ad81bb1f50770ee202:
+      base_file: v001.txt
+    e4b8d8d25c154f32b993967b610dd657:
       image_group_id: I2PD18031
-      title: ''
+      title: Volume 2 of mdzod lha 'grel/
       volume_number: 2
       total_pages: 384
+      base_file: v002.txt
 ebook_metadata:
   title: མཛོད་ལྷ་འགྲེལ།
   author: ''
