--- a/P007838.opf/layers/v001/Pagination.yml
+++ b/P007838.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: eaacd2f4da164d37800879ac1f7a437f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6d8ff2007a8144388a794bd58219bd2c:
