--- a/P007838.opf/layers/v002/Pagination.yml
+++ b/P007838.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: a2ecd0cae3a8453abf298dadae1c8c24
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   447d88cbca9043bf97289e1905afae1e:
