--- a/P007838.opf/meta.yml
+++ b/P007838.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007838
 initial_creation_type: ocr
+created_at: 21/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W3PD405
   title: མཛོད་ལྷ་འགྲེལ།
@@ -17,10 +19,3 @@ source_metadata:
       volume_number: 2
       total_pages: 384
       base_file: v002.txt
-ebook_metadata:
-  title: མཛོད་ལྷ་འགྲེལ།
-  author: ''
-  sku: P007838
-  cover: cover.jpg
-  layers:
-  - pagination
